# ha-water-tank-sensor

./: .gitignore  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml  docs.yml  lint.yml
crates/app/: Cargo.toml  README.md
crates/app/.cargo/: config.toml
crates/app/src/: board_components.rs  cell.rs  clock.rs  data_recording.rs  device_meta.rs  http.rs  logging.rs  main.rs  meta.rs  random.rs  sensor.rs  sensor_data.rs  sleep.rs  timing.rs  wifi.rs  worldtimeapi.rs
crates/service/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
crates/service/config/alloy/: config.alloy
crates/service/config/traefik/: traefik.yml
crates/service/src/: main.rs  main_tests.rs
schematics/: Sensor.kicad_sym  tank-sensor.kicad_pcb  tank-sensor.kicad_prl  tank-sensor.kicad_pro  tank-sensor.kicad_sch  tank-sensor.net
