[package]
authors = ["Patrick van der Velde"]
categories = ["embedded"]
description = "An application that runs on an ESP32-C6 to measure the water level in a tank."
documentation = "https://github.com/pvandervelde/ha-water-tank-sensor"
edition = "2021"
homepage = "https://github.com/pvandervelde/ha-water-tank-sensor"
keywords = ["embedded"]
license = "Apache-2.0"
name = "tank-sensor-level-embedded"
readme = "README.md"
repository = "https://github.com/pvandervelde/ha-water-tank-sensor"
version = "0.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[dependencies]
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", rev = "1c581661d78e0cf0f17b936297179b993fb149d7" }
embedded-io = { version = "0.6.1", default-features = false }
esp-alloc = { version = "0.5.0" }
esp-backtrace = { version = "0.14.2", features = [
    "esp32c6",
    "exception-handler",
    "panic-handler",
    "println",
] }

esp-hal = { version = "0.22.0", features = ["esp32c6", "log"] }

esp-println = { version = "0.12.0", features = ["esp32c6"] }

esp-wifi = { version = "0.11.0", default-features = false, features = [
    "esp32c6",
    "utils",
    "wifi",
    "esp-alloc",
    "log",
] }

heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }
critical-section = "1.2.0"
anyhow = { version = "1.0.95", default-features = false }
thiserror = { version = "2.0.9", default-features = false }
static_cell = { version = "2.1.0", default-features = false }
log = { version = "0.4.22", default-features = false }
scopeguard = { version = "1.2.0", default-features = false }
