[package]
authors = ["Patrick van der Velde"]
categories = ["embedded"]
description = "An service application that receives the water level measurements from an embedded app."
documentation = "https://github.com/pvandervelde/ha-water-tank-sensor"
edition = "2021"
homepage = "https://github.com/pvandervelde/ha-water-tank-sensor"
keywords = ["service"]
license = "Apache-2.0"
name = "tsl_service"
readme = "README.md"
repository = "https://github.com/pvandervelde/ha-water-tank-sensor"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
axum-otel-metrics = "0.9.1"
chrono = "0.4.39"
hifitime = "4.0.2"
log = "0.4.25"
lz4 = "1.28.1"
once_cell = "1.20.2"
opentelemetry = "0.27.1"
opentelemetry-appender-tracing = "0.27.0"
opentelemetry-otlp = "0.27.0"
opentelemetry-semantic-conventions = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["tokio"] }
reqwest = { version = "0.12.12", default-features = false, features = ["charset", "h2", "http2", "rustls-tls"] }
rustls = "0.23.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_influxlp = "0.1.4"
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full", "tracing"] }
tokio-rustls = "0.26.1"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-opentelemetry = "0.29.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uom = "0.36.0"
url = "2.5.4"
